# nautic

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
nautic_dns/: Cargo.toml
nautic_dns/src/: errors.rs  flags.rs  lib.rs  packet.rs  resolver.rs  util.rs
nautic_dns/src/protocol/: class.rs  errors.rs  flags.rs  header.rs  label.rs  message.rs  mod.rs  packet.rs  query.rs  question.rs  record.rs  records.rs  types.rs
src/: lib.rs  main.rs
