[package]
name = "nautic"
version = "0.1.0"
edition = "2021"
description = ""
repository = ""
authors = ["Vasco Serrano <main@neffware.com>"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["dns", "client", "server", "network", "nautic"]
publish = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
debug = false

[profile.dev.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
