[workspace]
members = [
  "nautic_dns",
  "."
]

[package]
name = "nautic"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/0xNeffarion/nautic"
authors = ["Vasco Serrano <main@neffware.com>"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "nautic"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
debug = false

[profile.dev.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
nautic_dns = { path = "nautic_dns" }