[workspace]
members = [
  "nautic_dns",
  "."
]

[package]
name = "nautic"
version = "0.0.1-alpha"
edition = "2021"
description = "A simple DNS server/client"
repository = "https://github.com/0xNeffarion/nautic"
authors = ["Vasco Serrano <main@neffware.com>"]
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nautic"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.dev.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
nautic_dns = { version = "0.0.1-alpha", path = "nautic_dns" }