[package]
name = "nautic_dns"
version = "0.0.1-alpha"
edition = "2021"
description = ""
repository = "https://github.com/0xNeffarion/nautic"
authors = ["Vasco Serrano <main@neffware.com>"]
readme = "README.md"
license = "MIT"
publish = true

[dependencies]
tokio = { version = "^1.30", features = [ "full" ] }
thiserror = { version = "^1" }
url = { version = "^2" }
bytes = { version = "^1", features = ["serde"] }
derive_more = { version = "^0" }
derive_builder = { version = "^0" }
rand = { version = "^0.8" }
bitter = { version = "^0.6" }
